$Id: CHANGES,v 1.44 2000/02/26 01:35:48 stelian Exp $

Changes between versions 0.4b14 and 0.4b15 (released ?????????????????)
=======================================================================

1.	Added a prompt command in interactive restore mode. Thanks
	to Andreas Dilger <adilger@home.com> for the patch.

Changes between versions 0.4b13 and 0.4b14 (released February 10, 2000)
=======================================================================

1.	Fixed a bug in dump which may have caused invalid deleted 
	directories to be dumped out if they were deleted after the
	mapping pass. This could occure on active filesystem and lead
	to heap corruption (causing dump malfunction in many possible ways).
	Thanks to Jan Sanislo <oystr@cs.washington.edu> for finding this
	bug and submitting the patch.

2.	Fixed the handling of the filesystem parameter in dump. A
	'/mnt/disk' parameter caused the disk contents to be dumped,
	but a '/mnt/disk/' parameter caused the mountpoint directory
	to be dumped (generally an empty directory).

3.	Improved the output of dump in order to tell which directory
	it is currently dumping (when dumping a subtree).

4.	Added the '-e' exclude inode option to dump. Thanks to
	Isaac Chuang <ike@isl.stanford.edu> for contributing with the patch.

5.	Added a REPORTING-BUGS file in order to provide a guide
	on how to correctly report a bug in dump/restore.

6.	Fixed a restore problem when restoring a hard link to an inode
	having the immutable or append-only attribute set. Thanks to
	Ambrose Li <acli@mingpaoxpress.com> for submitting the patch.

7.	Fixed a compatibility problem between dumps made on little
	endian machines (the format was correct) and big endian 
	machines (the format was incorrect). This fix break the
	compatibility with the older dumps made on big endian 
	machines (sparc, m86k, ppc etc). For the first time in
	linux dump's history (I believe), the dumps made by *BSD, 