@@ -1,10 +1,16 @@
-$Id: CHANGES,v 1.44 2000/02/26 01:35:48 stelian Exp $
+$Id: CHANGES,v 1.45 2000/03/01 10:16:05 stelian Exp $
 
 Changes between versions 0.4b14 and 0.4b15 (released ?????????????????)
 =======================================================================
 
 1.	Added a prompt command in interactive restore mode. Thanks
 	to Andreas Dilger <adilger@home.com> for the patch.
+
+2.	Fixed a buffer overflow problem in dump (caused by 
+	not checking the size of the filesystem parameter). 
+	Thanks to Kim Yong-jun <loveyou@hackerslab.org> for
+	reporting this on Bugtraq (and to several dump users
+	who forwarded me his mail).
 
 Changes between versions 0.4b13 and 0.4b14 (released February 10, 2000)
 =======================================================================
